--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tailwindcss": "^3.4.6",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
+    "vite-plugin-react": "^4.0.1",
     "vitest": "^1.2.0"
   }
 }
